--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="about__btn">
           <button class="btn" onclick="window.open('https://www.facebook.com/UPAvalledechalco', '_blank')">Facebook</button>
           <button class="btn" onclick="window.open('https://www.instagram.com/upa_valledechalco', '_blank')">Instagram</button>
-          <button class="btn" onclick="window.open('https://maps.app.goo.gl/Kr1hdXWRYfJMzRgD7', '_blank')">Instalaciones</button>
+          <button style="margin-top: 5px;" class="btn" onclick="window.open('https://maps.app.goo.gl/Kr1hdXWRYfJMzRgD7', '_blank')">Instalaciones</button>
         </div>
       </div>
     </div>
