--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
         <li><a href="#services">Servicios</a></li>
         <li><a href="#consultarActa">Consultar Acta</a></li>
         <li><a href="#contact">Contáctanos</a></li>
+        <li><a href="/views/login.html" style="color: #ba1934; font-weight: bold;">Ingresar</a></li>
+        <li><a href="/test/test.html"><span><i class="ri-code-box-fill"></i></span></a></li>
       </ul>
-      <button class="btn nav__btn">Ingresar</button>
     </nav>
     <div class="section__container header__container" id="home">
       <p style="color: black;">UPA Valle de Chalco Solidaridad</p>
@@ -183,7 +184,7 @@
         <h4>CONTÁCTANOS</h4>
         <ul class="footer__links">
           <li><a href="mailto:upavalledechalco@gmail.com">upavalledechalco@gmail.com</a></li>
-          <li><a href="tel:+5572513868">55 7251 3868</a></li>
+          <li><a href="tel:5572513868">55 7251 3868</a></li>
         </ul>
         <div class="footer__socials">
           <a href="https://www.facebook.com/UPAvalledechalco" target="_blank"><img src="/assets/images/facebook.png" alt="facebook"/></a>
