--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
         <li><a href="#consultarActa">Consultar Acta</a></li>
         <li><a href="#contact">Contáctanos</a></li>
         <li><a href="/views/login.html" style="color: #ba1934; font-weight: bold;">Ingresar</a></li>
-        <li><a href="/test/test.html"><span><i class="ri-code-box-fill"></i></span></a></li>
+        <li><a href="/views/admin.html" style="color: #ba1934; font-weight: bold;">Administración</a></li>
+        <li><a href="/test/test.php"><span><i class="ri-code-box-fill"></i></span></a></li>
       </ul>
     </nav>
     <div class="section__container header__container" id="home">
