--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
         <li><a href="#services">Servicios</a></li>
         <li><a href="#consultarActa">Consultar Acta</a></li>
         <li><a href="#contact">Contáctanos</a></li>
-        <li><a href="/views/login.html" style="color: #ba1934; font-weight: bold;">Ingresar</a></li>
-        <li><a href="/views/admin.html" style="color: #ba1934; font-weight: bold;">Administración</a></li>
+        <li><a href="/views/login.php" style="color: #ba1934; font-weight: bold;">Ingresar</a></li>
+        <li><a href="/views/admin/admin.php" style="color: #ba1934; font-weight: bold;">Administración</a></li>
+        <li><a href="/views/ts/tSocial.php" style="color: #ba1934; font-weight: bold;">Trabajo Social</a></li>
         <li><a href="/test/test.php"><span><i class="ri-code-box-fill"></i></span></a></li>
       </ul>
     </nav>
